# HA_HB_RT_rawScript

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
csv/: AutoCalibration.csv  Calibration.csv  CalibrationInitial.csv  Filtered.csv  Filtered2.csv  HA1_M0.csv  Jerk.csv  Snap.csv  idle1_M0.csv  idle2_M0.csv  idle3_M0.csv  idle4_M0.csv  idle5_M0.csv  idle6_M0.csv
csv/Calibration_n/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  45.csv  (+56 more)
docs/ButterworthLPF/: Notes
docs/CUSUM/: Notes
docs/Energy Envelope/: Notes
docs/InEKF/: Notes
docs/Polling/: Notes
include/: AutoCalibration.h  Butterworth.h  ButterworthLPF.h  CSVConverter.h  CUSUM.h  CWT.h  Calibration.h  CalibrationInitial.h  CalibrationMetrices.h  Derivative.h  DerivativeDetect.h  Detections.h  EnergyEnvelope.h  InEKF.h  MassConverter.h  Orientation.h  Polling.h  Threshold.h  normalization.h
scripts/: Calibration_Metrices.py  plotter.py  plotter2.py  plotter3.py  plotter4.py  plotter5.py  plotter6.py  plotter7.py  plotter8.py
src/: AutoCalibration.c  Butterworth.c  ButterworthLPF.c  CSVConverter.c  CUSUM.c  CWT.c  Calibration.c  CalibrationInitial.c  CalibrationMetrices.c  Derivative.c  DerivativeDetect.c  EnergyEnvelope.c  InEKF.c  MassConverter.c  Orientation.c  Polling.c  Threshold.c  main.c  normalization.c
